appId: org.wikipedia
---

- launchApp:
    appId: org.wikipedia
    clearState: true
- tapOn:
    text: "Forward"
    optional: true
- tapOn:
    text: "Forward"
    optional: true
- tapOn:
    text: "Forward"
    optional: true
- tapOn:
    text: "Skip"
    optional: true
- tapOn:
    text: "Close"
    optional: true

- takeScreenshot: app_state_after_onboarding