appId: org.wikipedia
---
- runFlow: ../subflows/launch_and_onboard.yaml
- runFlow: ../subflows/navigate_to_search.yaml

- tapOn:
    text: "Search Wikipedia"

- inputText: "Nikola Tesla"

- waitForAnimationToEnd

- tapOn:
    text: "Nikola Tesla"
    index: 1

- waitForAnimationToEnd

- tapOn:
    text: "Close"
    optional: true

- tapOn:
    text: "Close"
    optional: true

- assertVisible:
    text: "Nikola Tesla"

- tapOn: "Save"

- tapOn: "Save"
- assertVisible: "Remove from Saved"

- takeScreenshot: reading_list_saved