appId: org.wikipedia
---
- runFlow: ../subflows/launch_and_onboard.yaml
- runFlow: ../subflows/navigate_to_search.yaml

- tapOn:
    id: "search_card"

- inputText: "Albert Einstein"

- waitForAnimationToEnd

- tapOn:
    text: "Albert Einstein"
    index: 1

- waitForAnimationToEnd

- tapOn:
    text: "Close"
    optional: true

- tapOn:
    text: "Close"
    optional: true

- assertVisible:
    text: "Albert Einstein"

- scroll

- takeScreenshot: search_article_result